initialized custom db generator

--- a/Playground/appsettings.json
+++ b/Playground/appsettings.json
@@ -10,7 +10,7 @@
   "CORE_Configuration": {
     "AuthKey": "playauth",
     "CORE_Database": {
-      "ConnectionString": "Server=localhost\\SQLEXPRESS;Database=Playground;Trusted_Connection=True;"
+      "ConnectionString": "Server=ALEXIOS\\SQLEXPRESS;Database=Playground;Trusted_Connection=True;"
     }
   }
 }
