--- a/Core.DB/Core.DB.csproj
+++ b/Core.DB/Core.DB.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core.Shared\Core.Shared.csproj" />
+    <ProjectReference Include="..\Core.DB.Plugin.MSSQL\Core.DB.Plugin.MSSQL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
