--- a/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
+++ b/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
@@ -46,10 +46,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Commands\CMD_Generate_ORM.cs" />
+    <Compile Include="Commands\CMD_Generate_MSSQL_ORM.cs" />
     <Compile Include="MSSQL_GENERATOR\CORE_DB_GENERATOR_Configuration.cs" />
     <Compile Include="MSSQL_GENERATOR\CORE_MSSQL_DB_Generator.cs" />
     <Compile Include="MSSQL_GENERATOR\Enumerations\CORE_DB_TABLE_TEMPLATE_PLACEHOLDER.cs" />
+    <Compile Include="MSSQL_GENERATOR\ToolWindows\ORM_GENERATOR_WINDOW.xaml.cs">
+      <DependentUpon>ORM_GENERATOR_WINDOW.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CORE_VS_PLUGINPackage.cs" />
   </ItemGroup>
@@ -81,8 +84,25 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Commands\Resources\CMD_Generate_ORM.png" />
+    <Content Include="Commands\Resources\CMD_Generate_MSSQL_ORM.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Commands\Resources\CMD_Generate_MSSQL_ORM_icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="MSSQL_GENERATOR\Notes.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="MSSQL_GENERATOR\ToolWindows\ORM_GENERATOR_WINDOW.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
