--- a/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
+++ b/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
@@ -47,10 +47,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Commands\CMD_Generate_MSSQL_ORM.cs" />
-    <Compile Include="MSSQL_GENERATOR\CORE_DB_GENERATOR_Configuration.cs" />
-    <Compile Include="MSSQL_GENERATOR\CORE_MSSQL_DB_Generator.cs" />
-    <Compile Include="MSSQL_GENERATOR\Enumerations\CORE_DB_TABLE_TEMPLATE_PLACEHOLDER.cs" />
-    <Compile Include="MSSQL_GENERATOR\ToolWindows\ORM_GENERATOR_WINDOW.xaml.cs">
+    <Compile Include="Commands\CMD_Generate_MySQL_ORM.cs" />
+    <Compile Include="GENERATOR\CORE_MySQL_DB_Generator.cs" />
+    <Compile Include="GENERATOR_PLUGIN.cs" />
+    <Compile Include="GENERATOR\CORE_DB_GENERATOR_Configuration.cs" />
+    <Compile Include="GENERATOR\CORE_MSSQL_DB_Generator.cs" />
+    <Compile Include="GENERATOR\Enumerations\CORE_DB_TABLE_TEMPLATE_PLACEHOLDER.cs" />
+    <Compile Include="GENERATOR\ToolWindows\ORM_GENERATOR_WINDOW.xaml.cs">
       <DependentUpon>ORM_GENERATOR_WINDOW.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -79,6 +82,9 @@
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.7.2196" />
+    <PackageReference Include="MySql.Data">
+      <Version>8.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <VSCTCompile Include="Commands\CORE_VS_PLUGINPackage.vsct">
@@ -86,6 +92,9 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Commands\Resources\CMD_Generate_MySQL_ORM_icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Commands\Resources\CMD_Generate_MSSQL_ORM_icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
@@ -94,16 +103,19 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <Content Include="MSSQL_GENERATOR\Notes.txt" />
-    <EmbeddedResource Include="MSSQL_GENERATOR\Templates\DB_ORM_TEMPLATE.txt">
+    <Content Include="GENERATOR\Notes.txt" />
+    <EmbeddedResource Include="GENERATOR\Templates\DB_ORM_TEMPLATE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="MSSQL_GENERATOR\ToolWindows\ORM_GENERATOR_WINDOW.xaml">
+    <Page Include="GENERATOR\ToolWindows\ORM_GENERATOR_WINDOW.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MySQL GENERATOR\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
