--- a/Core.DB.Plugin.PostgreSQL/Core.DB.Plugin.PostgreSQL.csproj
+++ b/Core.DB.Plugin.PostgreSQL/Core.DB.Plugin.PostgreSQL.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+	  <PackageReference Include="Npgsql" Version="7.0.6" />
 	</ItemGroup>
 
 	<ItemGroup>
