implemented postgresql orm generator

--- a/Core.DB.Plugin.MySQL/Core.DB.Plugin.MySQL.csproj
+++ b/Core.DB.Plugin.MySQL/Core.DB.Plugin.MySQL.csproj
@@ -16,6 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Core.DB.Plugin.PostgreSQL\Core.DB.Plugin.PostgreSQL.csproj" />
 	  <ProjectReference Include="..\Core.DB.Plugin.Shared\Core.DB.Plugin.Shared.csproj" />
 	</ItemGroup>
 
