--- a/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
+++ b/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
@@ -48,11 +48,14 @@
   <ItemGroup>
     <Compile Include="Commands\CMD_Generate_MSSQL_ORM.cs" />
     <Compile Include="Commands\CMD_Generate_MySQL_ORM.cs" />
+    <Compile Include="Commands\CMD_Generate_PostgreSQL_ORM.cs" />
     <Compile Include="GENERATOR\CORE_MySQL_DB_Generator.cs" />
+    <Compile Include="GENERATOR\CORE_PostgreSQL_DB_Generator.cs" />
     <Compile Include="GENERATOR\Enumerations\GENERATOR_PLUGIN.cs" />
     <Compile Include="GENERATOR\CORE_DB_GENERATOR_Configuration.cs" />
     <Compile Include="GENERATOR\CORE_MSSQL_DB_Generator.cs" />
     <Compile Include="GENERATOR\Enumerations\CORE_DB_TABLE_TEMPLATE_PLACEHOLDER.cs" />
+    <Compile Include="GENERATOR\Model\CORE_DB_TABLE.cs" />
     <Compile Include="GENERATOR\ToolWindows\ORM_GENERATOR_WINDOW.xaml.cs">
       <DependentUpon>ORM_GENERATOR_WINDOW.xaml</DependentUpon>
     </Compile>
@@ -85,6 +88,9 @@
     <PackageReference Include="MySql.Data">
       <Version>8.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Npgsql">
+      <Version>7.0.6</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <VSCTCompile Include="Commands\CORE_VS_PLUGINPackage.vsct">
@@ -92,6 +98,9 @@
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Commands\Resources\CMD_Generate_PostgreSQL_ORM_icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Commands\Resources\CMD_Generate_MySQL_ORM_icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
