--- a/Playground/appsettings.json
+++ b/Playground/appsettings.json
@@ -10,7 +10,7 @@
   "CORE_Configuration": {
     "AuthKey": "playauth",
     "CORE_Database": {
-      "ConnectionString": "Server=ALEXIOS\\SQLEXPRESS;Database=Playground;Trusted_Connection=True;"
+      "ConnectionString": "Host=127.0.0.1;Port=5432;Username=postgresql_dev;Password=postgresql_dev;Database=smdb;"
     }
   }
 }
