--- a/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
+++ b/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Commands\CMD_Generate_MSSQL_ORM.cs" />
     <Compile Include="Commands\CMD_Generate_MySQL_ORM.cs" />
     <Compile Include="Commands\CMD_Generate_PostgreSQL_ORM.cs" />
+    <Compile Include="Commands\CMD_GIT_PullAll.cs" />
     <Compile Include="GENERATOR\CORE_MySQL_DB_Generator.cs" />
     <Compile Include="GENERATOR\CORE_PostgreSQL_DB_Generator.cs" />
     <Compile Include="GENERATOR\Enumerations\GENERATOR_PLUGIN.cs" />
@@ -61,6 +62,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CORE_VS_PLUGINPackage.cs" />
+    <Compile Include="Utils\CORE_VS_PLUGIN_HELPER.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -108,6 +110,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Commands\Resources\CMD_GIT_PullAll_icon.png" />
     <Content Include="logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
