--- a/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
+++ b/CORE_VS_PLUGIN/CORE_VS_PLUGIN.csproj
@@ -130,6 +130,9 @@
     <EmbeddedResource Include="GENERATOR\Templates\Query\RawConverter\DB_QUERY_RAW_CONVERTER_CHILD.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+    <EmbeddedResource Include="GENERATOR\Templates\Query\RawConverter\DB_QUERY_RAW_CONVERTER_ROOT_PROPERTY.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Content Include="Testing\DirectDB\Products\XML\Get_Products_for_ProductIDs.xml" />
     <EmbeddedResource Include="GENERATOR\Templates\Query\DB_QUERY_TEMPLATE.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
