--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -21,8 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core.DB\Core.DB.csproj" />
     <ProjectReference Include="..\Core.Shared\Core.Shared.csproj" />
+    <ProjectReference Include="..\CoreDB\CoreDB.csproj" />
   </ItemGroup>
 
   <ItemGroup>
