--- a/CoreDB/CoreDB.csproj
+++ b/CoreDB/CoreDB.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Database\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Core.DB.Plugin.PostgreSQL\Core.DB.Plugin.PostgreSQL.csproj" />
+    <ProjectReference Include="..\Core.DB.Plugin.MSSQL\Core.DB.Plugin.MSSQL.csproj" />
   </ItemGroup>
 
 </Project>
