--- a/CoreDB/CoreDB.csproj
+++ b/CoreDB/CoreDB.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core.DB.Plugin.MSSQL\Core.DB.Plugin.MSSQL.csproj" />
+    <ProjectReference Include="..\Core.DB.Plugin.MySQL\Core.DB.Plugin.MySQL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Database\" />
   </ItemGroup>
 
 </Project>
