--- a/Playground/appsettings.json
+++ b/Playground/appsettings.json
@@ -7,11 +7,12 @@
   },
   "AllowedHosts": "*",
 
-  "CORE_Configuration": {
-    "AuthKey": "playauth",
-    "CORE_Database": {
-      "ConnectionString": "Server=ALEXIOS\\SQLEXPRESS;Database=Playground;Trusted_Connection=True;"
-      // "ConnectionString": "Host=127.0.0.1;Port=5432;Username=postgresql_dev;Password=postgresql_dev;Database=smdb;"
-    }
+  "CORE_API": {
+    "AuthKey": "playauth"
+  },
+  "CORE_Database": {
+    "ConnectionString": "Server=localhost;Port=3306;Database=core_db;Uid=root;Pwd=root;"
+    //"ConnectionString": "Server=ALEXIOS\\SQLEXPRESS;Database=Playground;Trusted_Connection=True;"
+    // "ConnectionString": "Host=127.0.0.1;Port=5432;Username=postgresql_dev;Password=postgresql_dev;Database=smdb;"
   }
 }
