nuget package information

--- a/Core.DB.Plugin.MSSQL/Core.DB.Plugin.MSSQL.csproj
+++ b/Core.DB.Plugin.MSSQL/Core.DB.Plugin.MSSQL.csproj
@@ -5,6 +5,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<OutputType>Library</OutputType>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Title>Core.DB.Plugin.MSSQL</Title>
+		<Description>MSSQL database plugin</Description>
+		<Authors>Nebojsa Trajkovic</Authors>
 	</PropertyGroup>
 
 	<ItemGroup>
