--- a/Core.DB.Plugin.MySQL/Core.DB.Plugin.MySQL.csproj
+++ b/Core.DB.Plugin.MySQL/Core.DB.Plugin.MySQL.csproj
@@ -5,6 +5,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<OutputType>Library</OutputType>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Title>Core.DB.Plugin.MySQL</Title>
+		<Authors>Nebojsa Trajkovic</Authors>
+		<Description>MySQL database plugin</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
