--- a/Core.DB.Plugin.PostgreSQL/Core.DB.Plugin.PostgreSQL.csproj
+++ b/Core.DB.Plugin.PostgreSQL/Core.DB.Plugin.PostgreSQL.csproj
@@ -5,6 +5,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<OutputType>Library</OutputType>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Title>Core.DB.Plugin.PostgreSQL</Title>
+		<Authors>Nebojsa Trajkovic</Authors>
+		<Description>PostgreSQL database plugin</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
