updated solution - using nuget packages now

--- a/Core.DB.Plugin.Shared/Core.DB.Plugin.Shared.csproj
+++ b/Core.DB.Plugin.Shared/Core.DB.Plugin.Shared.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>Core.DB.Plugin.Shared</Title>
+    <Company></Company>
+    <Authors>Nebojsa Trajkovic</Authors>
+    <Description>Shared utilities for DB plugins.</Description>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
