updated generator for ORM and initialized auth
fixed an issue when adding new item to the database and not updating primary key value in returned object

--- a/Playground/Properties/launchSettings.json
+++ b/Playground/Properties/launchSettings.json
@@ -1,13 +1,13 @@
-﻿{
+{
   "profiles": {
     "Playground": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:21000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:21000"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -15,6 +15,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:63040/",
+      "sslPort": 44356
     }
   }
 }
