--- a/CoreDB/CoreDB.csproj
+++ b/CoreDB/CoreDB.csproj
@@ -15,16 +15,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core.DB.Plugin.MySQL\Core.DB.Plugin.MySQL.csproj" />
     <ProjectReference Include="..\Core.Shared\Core.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Database\ORM\" />
     <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Core.DB.Plugin.MySQL" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
