--- a/Core.DB.Plugin.MySQL/Core.DB.Plugin.MySQL.csproj
+++ b/Core.DB.Plugin.MySQL/Core.DB.Plugin.MySQL.csproj
@@ -23,4 +23,11 @@
 	  <ProjectReference Include="..\Core.DB.Plugin.Shared\Core.DB.Plugin.Shared.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="README.md">
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
