--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core.Auth\Core.Auth.csproj" />
     <ProjectReference Include="..\CoreDB\CoreDB.csproj" />
   </ItemGroup>
 
