--- a/Core.Auth/Core.Auth.csproj
+++ b/Core.Auth/Core.Auth.csproj
@@ -8,6 +8,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Models\Account\**" />
+	  <EmbeddedResource Remove="Models\Account\**" />
+	  <None Remove="Models\Account\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <None Remove="Database\DB\Accounts\SQL\Get_Accounts_for_ID.sql" />
 	</ItemGroup>
 
@@ -21,7 +27,6 @@
 
 	<ItemGroup>
 	  <Folder Include="Database\ORM\" />
-	  <Folder Include="Models\Account\" />
 	</ItemGroup>
 
 	<ItemGroup>
