--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -33,4 +33,11 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="README.md">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
