--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -15,12 +15,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Auth\Core.Auth.csproj" />
+    <ProjectReference Include="..\Core.Cloud\Core.Cloud.csproj" />
     <ProjectReference Include="..\CoreDB\CoreDB.csproj" />
   </ItemGroup>
 
