--- a/Core.Shared/Core.Shared.csproj
+++ b/Core.Shared/Core.Shared.csproj
@@ -11,4 +11,8 @@
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="8.0.0" />
+	</ItemGroup>
+
 </Project>
