--- a/Core.Auth/Core.Auth.csproj
+++ b/Core.Auth/Core.Auth.csproj
@@ -8,11 +8,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Database\DB\Accounts\SQL\Get_ExpiredSessions_which_AreNotDeleted.sql" />
 	  <None Remove="Database\DB\Accounts\SQL\Get_Tenants_for_AccountEmail.sql" />
 	  <None Remove="Database\DB\Tenants\SQL\Get_Tenants_for_Name.sql" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="Database\DB\Accounts\SQL\Get_ExpiredSessions_which_AreNotDeleted.sql" />
 	  <EmbeddedResource Include="Database\DB\Accounts\SQL\Get_Tenants_for_AccountEmail.sql" />
 	  <EmbeddedResource Include="Database\DB\Tenants\SQL\Get_Tenants_for_Name.sql" />
 	</ItemGroup>
