--- a/Core.Cloud/Core.Cloud.csproj
+++ b/Core.Cloud/Core.Cloud.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Database\Query\Folder\SQL\Get_ExistingFolders_for_Name_and_ParentFolder.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Database\Query\Folder\SQL\Get_ExistingFolders_for_Name_and_ParentFolder.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Core.DB.Plugin\Core.DB.Plugin.MySQL\Core.DB.Plugin.MySQL.csproj" />
   </ItemGroup>
 
