--- a/Playground/appsettings.json
+++ b/Playground/appsettings.json
@@ -2,6 +2,9 @@
   "CORE_API": {
     "AuthKey": "playauth"
   },
+  "CLOUD": {
+    "FileStoragePath": "FileStorage"
+  },
   "CORE_Database": {
     "ConnectionString": "Server=localhost;Port=3306;Database=core_db;Uid=root;Pwd=root;"
     //"ConnectionString": "Server=ALEXIOS\\SQLEXPRESS;Database=Playground;Trusted_Connection=True;"
