create or update stripe product with price

--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core.Auth\Core.Auth.csproj" />
     <ProjectReference Include="..\Core.Cloud\Core.Cloud.csproj" />
+    <ProjectReference Include="..\Core.Stripe\Core.Stripe.csproj" />
     <ProjectReference Include="..\CoreDB\CoreDB.csproj" />
   </ItemGroup>
 
