--- a/Playground/appsettings.json
+++ b/Playground/appsettings.json
@@ -9,5 +9,8 @@
     "ConnectionString": "Server=localhost;Port=3306;Database=core_db;Uid=root;Pwd=root;"
     //"ConnectionString": "Server=ALEXIOS\\SQLEXPRESS;Database=Playground;Trusted_Connection=True;"
     // "ConnectionString": "Host=127.0.0.1;Port=5432;Username=postgresql_dev;Password=postgresql_dev;Database=smdb;"
+  },
+  "CORE_Stripe": {
+    "ApiKey": ""
   }
 }
