added more Stripe method integrations

--- a/Core.Stripe/Core.Stripe.csproj
+++ b/Core.Stripe/Core.Stripe.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\..\Core.DB.Plugin\Core.DB.Plugin.MySQL\Core.DB.Plugin.MySQL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Database\Query\" />
+    <Folder Include="Database\ORM\" />
+  </ItemGroup>
+
 </Project>
